A4/group7/y.output
State 107 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_statement_list func_def
    2        | func_def

    3 global_decl_statement_list: global_decl_statement_list func_decl
    4                           | global_decl_statement_list var_decl_stmt
    5                           | var_decl_stmt
    6                           | func_decl

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON

    9 func_header: named_type var_decl_item

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   11         | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

   12 formal_param_list: formal_param_list COMMA formal_param
   13                  | formal_param

   14 formal_param: param_type var_decl_item

   15 param_type: INTEGER
   16           | FLOAT
   17           | BOOL
   18           | STRING

   19 optional_local_var_decl_stmt_list: %empty
   20                                  | var_decl_stmt_list

   21 var_decl_stmt_list: var_decl_stmt
   22                   | var_decl_stmt_list var_decl_stmt

   23 var_decl_stmt: named_type var_decl_item_list SEMICOLON

   24 var_decl_item_list: var_decl_item_list COMMA var_decl_item
   25                   | var_decl_item

   26 var_decl_item: NAME

   27 named_type: INTEGER
   28           | FLOAT
   29           | VOID
   30           | BOOL
   31           | STRING

   32 statement_list: statement_list statement
   33               | %empty

   34 statement: assignment_statement
   35          | print_statement
   36          | read_statement
   37          | if_statement
   38          | do_while_statement
   39          | while_statement
   40          | compound_statement

   41 assignment_statement: variable_as_operand ASSIGN_OP expression SEMICOLON

   42 if_condition: LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET

   43 if_statement: IF if_condition statement ELSE statement
   44             | IF if_condition statement

   45 do_while_statement: DO statement WHILE LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET SEMICOLON

   46 while_statement: WHILE LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET statement

   47 compound_statement: LEFT_CURLY_BRACKET statement_list RIGHT_CURLY_BRACKET

   48 variable_as_operand: variable_name

   49 variable_name: NAME

   50 print_statement: WRITE expression SEMICOLON

   51 read_statement: READ variable_name SEMICOLON

   52 expression: expression PLUS expression
   53           | expression MINUS expression
   54           | expression MULT expression
   55           | expression DIV expression
   56           | MINUS expression
   57           | LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET
   58           | expression QUESTION_MARK expression COLON expression
   59           | expression AND expression
   60           | expression OR expression
   61           | NOT expression
   62           | rel_expression
   63           | variable_as_operand
   64           | constant_as_operand

   65 rel_expression: expression LT expression
   66               | expression LE expression
   67               | expression GT expression
   68               | expression GE expression
   69               | expression NE expression
   70               | expression EQ expression

   71 constant_as_operand: INT_NUM
   72                    | FLOAT_NUM
   73                    | STR_CONST


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 15 27
VOID (259) 29
FLOAT (260) 16 28
STRING (261) 18 31
BOOL (262) 17 30
ASSIGN_OP (263) 41
SEMICOLON (264) 7 8 23 41 45 50 51
LEFT_ROUND_BRACKET (265) 7 8 10 11 42 45 46 57
RIGHT_ROUND_BRACKET (266) 7 8 10 11 42 45 46 57
LEFT_CURLY_BRACKET (267) 10 11 47
RIGHT_CURLY_BRACKET (268) 10 11 47
COMMA (269) 12 24
WRITE (270) 50
READ (271) 51
PLUS (272) 52
MINUS (273) 53 56
MULT (274) 54
DIV (275) 55
INT_NUM (276) 71
FLOAT_NUM (277) 72
NAME (278) 26 49
STR_CONST (279) 73
QUESTION_MARK (280) 58
COLON (281) 58
AND (282) 59
OR (283) 60
NOT (284) 61
LT (285) 65
LE (286) 66
GT (287) 67
GE (288) 68
NE (289) 69
EQ (290) 70
DO (291) 45
WHILE (292) 45 46
IF (293) 43 44
ELSE (294) 43
UMINUS (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1 2, on right: 0
global_decl_statement_list (43)
    on left: 3 4 5 6, on right: 1 3 4
func_decl (44)
    on left: 7 8, on right: 3 6
func_header (45)
    on left: 9, on right: 7 8 10 11
func_def (46)
    on left: 10 11, on right: 1 2
formal_param_list (47)
    on left: 12 13, on right: 7 10 12
formal_param (48)
    on left: 14, on right: 12 13
param_type (49)
    on left: 15 16 17 18, on right: 14
optional_local_var_decl_stmt_list (50)
    on left: 19 20, on right: 10 11
var_decl_stmt_list (51)
    on left: 21 22, on right: 20 22
var_decl_stmt (52)
    on left: 23, on right: 4 5 21 22
var_decl_item_list (53)
    on left: 24 25, on right: 23 24
var_decl_item (54)
    on left: 26, on right: 9 14 24 25
named_type (55)
    on left: 27 28 29 30 31, on right: 9 23
statement_list (56)
    on left: 32 33, on right: 10 11 32 47
statement (57)
    on left: 34 35 36 37 38 39 40, on right: 32 43 44 45 46
assignment_statement (58)
    on left: 41, on right: 34
if_condition (59)
    on left: 42, on right: 43 44
if_statement (60)
    on left: 43 44, on right: 37
do_while_statement (61)
    on left: 45, on right: 38
while_statement (62)
    on left: 46, on right: 39
compound_statement (63)
    on left: 47, on right: 40
variable_as_operand (64)
    on left: 48, on right: 41 63
variable_name (65)
    on left: 49, on right: 48 51
print_statement (66)
    on left: 50, on right: 35
read_statement (67)
    on left: 51, on right: 36
expression (68)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64, on right: 41 42
    45 46 50 52 53 54 55 56 57 58 59 60 61 65 66 67 68 69 70
rel_expression (69)
    on left: 65 66 67 68 69 70, on right: 62
constant_as_operand (70)
    on left: 71 72 73, on right: 64


State 0

    0 $accept: . program $end

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    program                     go to state 6
    global_decl_statement_list  go to state 7
    func_decl                   go to state 8
    func_header                 go to state 9
    func_def                    go to state 10
    var_decl_stmt               go to state 11
    named_type                  go to state 12


State 1

   27 named_type: INTEGER .

    $default  reduce using rule 27 (named_type)


State 2

   29 named_type: VOID .

    $default  reduce using rule 29 (named_type)


State 3

   28 named_type: FLOAT .

    $default  reduce using rule 28 (named_type)


State 4

   31 named_type: STRING .

    $default  reduce using rule 31 (named_type)


State 5

   30 named_type: BOOL .

    $default  reduce using rule 30 (named_type)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 13


State 7

    1 program: global_decl_statement_list . func_def
    3 global_decl_statement_list: global_decl_statement_list . func_decl
    4                           | global_decl_statement_list . var_decl_stmt

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    func_decl      go to state 14
    func_header    go to state 9
    func_def       go to state 15
    var_decl_stmt  go to state 16
    named_type     go to state 12


State 8

    6 global_decl_statement_list: func_decl .

    $default  reduce using rule 6 (global_decl_statement_list)


State 9

    7 func_decl: func_header . LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header . LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON
   10 func_def: func_header . LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   11         | func_header . LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 17


State 10

    2 program: func_def .

    $default  reduce using rule 2 (program)


State 11

    5 global_decl_statement_list: var_decl_stmt .

    $default  reduce using rule 5 (global_decl_statement_list)


State 12

    9 func_header: named_type . var_decl_item
   23 var_decl_stmt: named_type . var_decl_item_list SEMICOLON

    NAME  shift, and go to state 18

    var_decl_item_list  go to state 19
    var_decl_item       go to state 20


State 13

    0 $accept: program $end .

    $default  accept


State 14

    3 global_decl_statement_list: global_decl_statement_list func_decl .

    $default  reduce using rule 3 (global_decl_statement_list)


State 15

    1 program: global_decl_statement_list func_def .

    $default  reduce using rule 1 (program)


State 16

    4 global_decl_statement_list: global_decl_statement_list var_decl_stmt .

    $default  reduce using rule 4 (global_decl_statement_list)


State 17

    7 func_decl: func_header LEFT_ROUND_BRACKET . formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    8          | func_header LEFT_ROUND_BRACKET . RIGHT_ROUND_BRACKET SEMICOLON
   10 func_def: func_header LEFT_ROUND_BRACKET . formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   11         | func_header LEFT_ROUND_BRACKET . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER              shift, and go to state 21
    FLOAT                shift, and go to state 22
    STRING               shift, and go to state 23
    BOOL                 shift, and go to state 24
    RIGHT_ROUND_BRACKET  shift, and go to state 25

    formal_param_list  go to state 26
    formal_param       go to state 27
    param_type         go to state 28


State 18

   26 var_decl_item: NAME .

    $default  reduce using rule 26 (var_decl_item)


State 19

   23 var_decl_stmt: named_type var_decl_item_list . SEMICOLON
   24 var_decl_item_list: var_decl_item_list . COMMA var_decl_item

    SEMICOLON  shift, and go to state 29
    COMMA      shift, and go to state 30


State 20

    9 func_header: named_type var_decl_item .
   25 var_decl_item_list: var_decl_item .

    LEFT_ROUND_BRACKET  reduce using rule 9 (func_header)
    $default            reduce using rule 25 (var_decl_item_list)


State 21

   15 param_type: INTEGER .

    $default  reduce using rule 15 (param_type)


State 22

   16 param_type: FLOAT .

    $default  reduce using rule 16 (param_type)


State 23

   18 param_type: STRING .

    $default  reduce using rule 18 (param_type)


State 24

   17 param_type: BOOL .

    $default  reduce using rule 17 (param_type)


State 25

    8 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET . SEMICOLON
   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    SEMICOLON           shift, and go to state 31
    LEFT_CURLY_BRACKET  shift, and go to state 32


State 26

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list . RIGHT_ROUND_BRACKET SEMICOLON
   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   12 formal_param_list: formal_param_list . COMMA formal_param

    RIGHT_ROUND_BRACKET  shift, and go to state 33
    COMMA                shift, and go to state 34


State 27

   13 formal_param_list: formal_param .

    $default  reduce using rule 13 (formal_param_list)


State 28

   14 formal_param: param_type . var_decl_item

    NAME  shift, and go to state 18

    var_decl_item  go to state 35


State 29

   23 var_decl_stmt: named_type var_decl_item_list SEMICOLON .

    $default  reduce using rule 23 (var_decl_stmt)


State 30

   24 var_decl_item_list: var_decl_item_list COMMA . var_decl_item

    NAME  shift, and go to state 18

    var_decl_item  go to state 36


State 31

    8 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON .

    $default  reduce using rule 8 (func_decl)


State 32

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 19 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 37
    var_decl_stmt_list                 go to state 38
    var_decl_stmt                      go to state 39
    named_type                         go to state 40


State 33

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET . SEMICOLON
   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    SEMICOLON           shift, and go to state 41
    LEFT_CURLY_BRACKET  shift, and go to state 42


State 34

   12 formal_param_list: formal_param_list COMMA . formal_param

    INTEGER  shift, and go to state 21
    FLOAT    shift, and go to state 22
    STRING   shift, and go to state 23
    BOOL     shift, and go to state 24

    formal_param  go to state 43
    param_type    go to state 28


State 35

   14 formal_param: param_type var_decl_item .

    $default  reduce using rule 14 (formal_param)


State 36

   24 var_decl_item_list: var_decl_item_list COMMA var_decl_item .

    $default  reduce using rule 24 (var_decl_item_list)


State 37

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list . statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 33 (statement_list)

    statement_list  go to state 44


State 38

   20 optional_local_var_decl_stmt_list: var_decl_stmt_list .
   22 var_decl_stmt_list: var_decl_stmt_list . var_decl_stmt

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 20 (optional_local_var_decl_stmt_list)

    var_decl_stmt  go to state 45
    named_type     go to state 40


State 39

   21 var_decl_stmt_list: var_decl_stmt .

    $default  reduce using rule 21 (var_decl_stmt_list)


State 40

   23 var_decl_stmt: named_type . var_decl_item_list SEMICOLON

    NAME  shift, and go to state 18

    var_decl_item_list  go to state 19
    var_decl_item       go to state 46


State 41

    7 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON .

    $default  reduce using rule 7 (func_decl)


State 42

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 19 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 47
    var_decl_stmt_list                 go to state 38
    var_decl_stmt                      go to state 39
    named_type                         go to state 40


State 43

   12 formal_param_list: formal_param_list COMMA formal_param .

    $default  reduce using rule 12 (formal_param_list)


State 44

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list . RIGHT_CURLY_BRACKET
   32 statement_list: statement_list . statement

    LEFT_CURLY_BRACKET   shift, and go to state 48
    RIGHT_CURLY_BRACKET  shift, and go to state 49
    WRITE                shift, and go to state 50
    READ                 shift, and go to state 51
    NAME                 shift, and go to state 52
    DO                   shift, and go to state 53
    WHILE                shift, and go to state 54
    IF                   shift, and go to state 55

    statement             go to state 56
    assignment_statement  go to state 57
    if_statement          go to state 58
    do_while_statement    go to state 59
    while_statement       go to state 60
    compound_statement    go to state 61
    variable_as_operand   go to state 62
    variable_name         go to state 63
    print_statement       go to state 64
    read_statement        go to state 65


State 45

   22 var_decl_stmt_list: var_decl_stmt_list var_decl_stmt .

    $default  reduce using rule 22 (var_decl_stmt_list)


State 46

   25 var_decl_item_list: var_decl_item .

    $default  reduce using rule 25 (var_decl_item_list)


State 47

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list . statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 33 (statement_list)

    statement_list  go to state 66


State 48

   47 compound_statement: LEFT_CURLY_BRACKET . statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 33 (statement_list)

    statement_list  go to state 67


State 49

   11 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET .

    $default  reduce using rule 11 (func_def)


State 50

   50 print_statement: WRITE . expression SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 75
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 51

   51 read_statement: READ . variable_name SEMICOLON

    NAME  shift, and go to state 52

    variable_name  go to state 78


State 52

   49 variable_name: NAME .

    $default  reduce using rule 49 (variable_name)


State 53

   45 do_while_statement: DO . statement WHILE LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET SEMICOLON

    LEFT_CURLY_BRACKET  shift, and go to state 48
    WRITE               shift, and go to state 50
    READ                shift, and go to state 51
    NAME                shift, and go to state 52
    DO                  shift, and go to state 53
    WHILE               shift, and go to state 54
    IF                  shift, and go to state 55

    statement             go to state 79
    assignment_statement  go to state 57
    if_statement          go to state 58
    do_while_statement    go to state 59
    while_statement       go to state 60
    compound_statement    go to state 61
    variable_as_operand   go to state 62
    variable_name         go to state 63
    print_statement       go to state 64
    read_statement        go to state 65


State 54

   46 while_statement: WHILE . LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET statement

    LEFT_ROUND_BRACKET  shift, and go to state 80


State 55

   43 if_statement: IF . if_condition statement ELSE statement
   44             | IF . if_condition statement

    LEFT_ROUND_BRACKET  shift, and go to state 81

    if_condition  go to state 82


State 56

   32 statement_list: statement_list statement .

    $default  reduce using rule 32 (statement_list)


State 57

   34 statement: assignment_statement .

    $default  reduce using rule 34 (statement)


State 58

   37 statement: if_statement .

    $default  reduce using rule 37 (statement)


State 59

   38 statement: do_while_statement .

    $default  reduce using rule 38 (statement)


State 60

   39 statement: while_statement .

    $default  reduce using rule 39 (statement)


State 61

   40 statement: compound_statement .

    $default  reduce using rule 40 (statement)


State 62

   41 assignment_statement: variable_as_operand . ASSIGN_OP expression SEMICOLON

    ASSIGN_OP  shift, and go to state 83


State 63

   48 variable_as_operand: variable_name .

    $default  reduce using rule 48 (variable_as_operand)


State 64

   35 statement: print_statement .

    $default  reduce using rule 35 (statement)


State 65

   36 statement: read_statement .

    $default  reduce using rule 36 (statement)


State 66

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list . RIGHT_CURLY_BRACKET
   32 statement_list: statement_list . statement

    LEFT_CURLY_BRACKET   shift, and go to state 48
    RIGHT_CURLY_BRACKET  shift, and go to state 84
    WRITE                shift, and go to state 50
    READ                 shift, and go to state 51
    NAME                 shift, and go to state 52
    DO                   shift, and go to state 53
    WHILE                shift, and go to state 54
    IF                   shift, and go to state 55

    statement             go to state 56
    assignment_statement  go to state 57
    if_statement          go to state 58
    do_while_statement    go to state 59
    while_statement       go to state 60
    compound_statement    go to state 61
    variable_as_operand   go to state 62
    variable_name         go to state 63
    print_statement       go to state 64
    read_statement        go to state 65


State 67

   32 statement_list: statement_list . statement
   47 compound_statement: LEFT_CURLY_BRACKET statement_list . RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET   shift, and go to state 48
    RIGHT_CURLY_BRACKET  shift, and go to state 85
    WRITE                shift, and go to state 50
    READ                 shift, and go to state 51
    NAME                 shift, and go to state 52
    DO                   shift, and go to state 53
    WHILE                shift, and go to state 54
    IF                   shift, and go to state 55

    statement             go to state 56
    assignment_statement  go to state 57
    if_statement          go to state 58
    do_while_statement    go to state 59
    while_statement       go to state 60
    compound_statement    go to state 61
    variable_as_operand   go to state 62
    variable_name         go to state 63
    print_statement       go to state 64
    read_statement        go to state 65


State 68

   57 expression: LEFT_ROUND_BRACKET . expression RIGHT_ROUND_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 86
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 69

   56 expression: MINUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 87
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 70

   71 constant_as_operand: INT_NUM .

    $default  reduce using rule 71 (constant_as_operand)


State 71

   72 constant_as_operand: FLOAT_NUM .

    $default  reduce using rule 72 (constant_as_operand)


State 72

   73 constant_as_operand: STR_CONST .

    $default  reduce using rule 73 (constant_as_operand)


State 73

   61 expression: NOT . expression

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 88
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 74

   63 expression: variable_as_operand .

    $default  reduce using rule 63 (expression)


State 75

   50 print_statement: WRITE expression . SEMICOLON
   52 expression: expression . PLUS expression
   53           | expression . MINUS expression
   54           | expression . MULT expression
   55           | expression . DIV expression
   58           | expression . QUESTION_MARK expression COLON expression
   59           | expression . AND expression
   60           | expression . OR expression
   65 rel_expression: expression . LT expression
   66               | expression . LE expression
   67               | expression . GT expression
   68               | expression . GE expression
   69               | expression . NE expression
   70               | expression . EQ expression

    SEMICOLON      shift, and go to state 89
    PLUS           shift, and go to state 90
    MINUS          shift, and go to state 91
    MULT           shift, and go to state 92
    DIV            shift, and go to state 93
    QUESTION_MARK  shift, and go to state 94
    AND            shift, and go to state 95
    OR             shift, and go to state 96
    LT             shift, and go to state 97
    LE             shift, and go to state 98
    GT             shift, and go to state 99
    GE             shift, and go to state 100
    NE             shift, and go to state 101
    EQ             shift, and go to state 102


State 76

   62 expression: rel_expression .

    $default  reduce using rule 62 (expression)


State 77

   64 expression: constant_as_operand .

    $default  reduce using rule 64 (expression)


State 78

   51 read_statement: READ variable_name . SEMICOLON

    SEMICOLON  shift, and go to state 103


State 79

   45 do_while_statement: DO statement . WHILE LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET SEMICOLON

    WHILE  shift, and go to state 104


State 80

   46 while_statement: WHILE LEFT_ROUND_BRACKET . expression RIGHT_ROUND_BRACKET statement

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 105
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 81

   42 if_condition: LEFT_ROUND_BRACKET . expression RIGHT_ROUND_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 106
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 82

   43 if_statement: IF if_condition . statement ELSE statement
   44             | IF if_condition . statement

    LEFT_CURLY_BRACKET  shift, and go to state 48
    WRITE               shift, and go to state 50
    READ                shift, and go to state 51
    NAME                shift, and go to state 52
    DO                  shift, and go to state 53
    WHILE               shift, and go to state 54
    IF                  shift, and go to state 55

    statement             go to state 107
    assignment_statement  go to state 57
    if_statement          go to state 58
    do_while_statement    go to state 59
    while_statement       go to state 60
    compound_statement    go to state 61
    variable_as_operand   go to state 62
    variable_name         go to state 63
    print_statement       go to state 64
    read_statement        go to state 65


State 83

   41 assignment_statement: variable_as_operand ASSIGN_OP . expression SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 108
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 84

   10 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET .

    $default  reduce using rule 10 (func_def)


State 85

   47 compound_statement: LEFT_CURLY_BRACKET statement_list RIGHT_CURLY_BRACKET .

    $default  reduce using rule 47 (compound_statement)


State 86

   52 expression: expression . PLUS expression
   53           | expression . MINUS expression
   54           | expression . MULT expression
   55           | expression . DIV expression
   57           | LEFT_ROUND_BRACKET expression . RIGHT_ROUND_BRACKET
   58           | expression . QUESTION_MARK expression COLON expression
   59           | expression . AND expression
   60           | expression . OR expression
   65 rel_expression: expression . LT expression
   66               | expression . LE expression
   67               | expression . GT expression
   68               | expression . GE expression
   69               | expression . NE expression
   70               | expression . EQ expression

    RIGHT_ROUND_BRACKET  shift, and go to state 109
    PLUS                 shift, and go to state 90
    MINUS                shift, and go to state 91
    MULT                 shift, and go to state 92
    DIV                  shift, and go to state 93
    QUESTION_MARK        shift, and go to state 94
    AND                  shift, and go to state 95
    OR                   shift, and go to state 96
    LT                   shift, and go to state 97
    LE                   shift, and go to state 98
    GT                   shift, and go to state 99
    GE                   shift, and go to state 100
    NE                   shift, and go to state 101
    EQ                   shift, and go to state 102


State 87

   52 expression: expression . PLUS expression
   53           | expression . MINUS expression
   54           | expression . MULT expression
   55           | expression . DIV expression
   56           | MINUS expression .
   58           | expression . QUESTION_MARK expression COLON expression
   59           | expression . AND expression
   60           | expression . OR expression
   65 rel_expression: expression . LT expression
   66               | expression . LE expression
   67               | expression . GT expression
   68               | expression . GE expression
   69               | expression . NE expression
   70               | expression . EQ expression

    $default  reduce using rule 56 (expression)


State 88

   52 expression: expression . PLUS expression
   53           | expression . MINUS expression
   54           | expression . MULT expression
   55           | expression . DIV expression
   58           | expression . QUESTION_MARK expression COLON expression
   59           | expression . AND expression
   60           | expression . OR expression
   61           | NOT expression .
   65 rel_expression: expression . LT expression
   66               | expression . LE expression
   67               | expression . GT expression
   68               | expression . GE expression
   69               | expression . NE expression
   70               | expression . EQ expression

    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    MULT   shift, and go to state 92
    DIV    shift, and go to state 93
    LT     shift, and go to state 97
    LE     shift, and go to state 98
    GT     shift, and go to state 99
    GE     shift, and go to state 100
    NE     shift, and go to state 101
    EQ     shift, and go to state 102

    $default  reduce using rule 61 (expression)


State 89

   50 print_statement: WRITE expression SEMICOLON .

    $default  reduce using rule 50 (print_statement)


State 90

   52 expression: expression PLUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 110
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 91

   53 expression: expression MINUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 111
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 92

   54 expression: expression MULT . expression

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 112
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 93

   55 expression: expression DIV . expression

    LEFT_ROUND_BRACKET  shift, and go to state 68
    MINUS               shift, and go to state 69
    INT_NUM             shift, and go to state 70
    FLOAT_NUM           shift, and go to state 71
    NAME                shift, and go to state 52
    STR_CONST           shift, and go to state 72
    NOT                 shift, and go to state 73

    variable_as_operand  go to state 74
    variable_name        go to state 63
    expression           go to state 113
    rel_expression       go to state 76
    constant_as_operand  go to state 77


State 94

   58 expression: expression QUESTION_MARK . expression COLON expression
